--- a/_appdata/settings.json
+++ b/_appdata/settings.json
@@ -1,7 +1,3 @@
 {
-    "plots_interactive": false,
-    "kaggle": {
-        "username": "",
-        "key": ""
-    }
+    "plots_interactive": true
 }
