--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,9 @@ spacy
 TextBlob
 vaderSentiment
 pattern
-chatterbot==1.0.4
-chatterbot-corpus
-gensim==3.8.3
+# chatterbot==1.0.4
+# chatterbot-corpus
+# gensim==3.8.3
 sumy
 # goslate
 googletrans
