--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ datasets
 # NLP
 nltk
 spacy
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
 TextBlob
 vaderSentiment
 pattern
